# 250806

./: .cursorrules  .gitignore  README.md  main.py  pyproject.toml  validate_setup.py
.cursor/rules/: algorithms-implementations.mdc  data-flow.mdc  neural-network-architecture.mdc
.giga/: specifications.json
pytorch_showcase/: __init__.py
pytorch_showcase/demos/: __init__.py  cnn_demo.py  gan_demo.py  transformer_demo.py
pytorch_showcase/models/: __init__.py  cnn.py  gan.py  transformer.py
pytorch_showcase/notebooks/: .gitkeep
pytorch_showcase/utils/: __init__.py  data_utils.py  metrics.py  trainer.py  visualizer.py
