[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-showcase"
version = "0.1.0"
description = "A comprehensive PyTorch project showcasing various deep learning techniques"
authors = [{name = "PyTorch Showcase", email = "showcase@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "wandb>=0.16.0",
    "tensorboard>=2.14.0",
    "scikit-learn>=1.3.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/example/pytorch-showcase"
Repository = "https://github.com/example/pytorch-showcase"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true